tests/pact/bad/bad-name-module-chars.repl
(module char# G
  (defcap G () true))
